# cuenta

./: .env  README.md  pyproject.toml
src/: main.py
src/controllers/: TareaController.py  UsuariosController.py
src/database/: gestor_tareas.sql
src/models/: TareasModel.py  UsuariosModel.py  databaseModel.py  schemasModel.py
src/tareas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/view/: DashboardView.py  LoginView.py  RegisterView.py  UsuarioView.py
